--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     compile 'com.android.volley:volley:1.0.0'
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
+    compile "com.daimajia.swipelayout:library:1.2.0@aar"
     compile 'com.google.android.gms:play-services-analytics:9.8.0'
     compile 'com.google.firebase:firebase-messaging:9.8.0'
     compile 'com.google.firebase:firebase-auth:9.8.0'
@@ -61,6 +62,8 @@ dependencies {
     compile 'com.google.android.gms:play-services-auth:9.8.0'
     compile 'com.facebook.android:facebook-android-sdk:4.0.0'
     compile 'com.firebase:firebase-client-android:2.5.2'
+    compile files('libs/prettytime.jar')
+    compile files('libs/YouTubeAndroidPlayerApi.jar')
     compile('com.twitter.sdk.android:twitter:2.2.0@aar') {
         transitive = true;
     }
