--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,10 +22,14 @@ android {
         applicationId "net.winnerawan.layarkaca"
         minSdkVersion 17
         targetSdkVersion 23
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
+        multiDexEnabled true
+    }
+    dexOptions {
+        javaMaxHeapSize "4g"
     }
     buildTypes {
         release {
@@ -69,6 +73,9 @@ dependencies {
     compile 'com.firebase:firebase-client-android:2.5.2'
     compile 'com.linsea:universalvideoview:1.1.0@aar'
     compile 'com.github.rtoshiro.fullscreenvideoview:fullscreenvideoview:1.1.2'
+    compile 'com.google.android.exoplayer:exoplayer:r1.5.8'
+    compile 'com.google.android.gms:play-services-cast-framework:9.8.0'
+    compile 'com.googlecode.android-query:android-query:0.25.9'
     compile files('libs/prettytime.jar')
     compile files('libs/YouTubeAndroidPlayerApi.jar')
     compile('com.twitter.sdk.android:twitter:2.2.0@aar') {
