--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,12 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
+    <uses-feature
+        android:glEsVersion="0x20000"
+        android:required="true" />
 
     <application
         android:name=".app.AppController"
@@ -50,7 +56,7 @@
         <activity android:name=".activity.PrivacyPolicyActivity" />
         <activity android:name=".activity.MyProfileActivity" />
         <activity android:name=".activity.TermConditionActivity" />
-        <!--Include the AdActivity configChanges and theme. -->
+        <!-- Include the AdActivity configChanges and theme. -->
         <activity
             android:name="com.google.android.gms.ads.AdActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
@@ -76,10 +82,33 @@
             android:configChanges="orientation|screenSize"
             android:parentActivityName=".activity.DetailMovieActivity"
             android:theme="@style/AppFull" />
+        <activity
+            android:name=".activity.WatchSemiMovieActivity"
+            android:configChanges="orientation|screenSize"
+            android:parentActivityName=".activity.DetailMovieActivity"
+            android:theme="@style/AppFull" />
         <activity android:name=".activity.TVStreamActivity" />
         <activity android:name=".activity.StreamActivity" />
         <activity android:name=".activity.SerialMovieActivity" />
-        <activity android:name=".activity.AnimeListActivity"></activity>
+        <activity android:name=".activity.AnimeListActivity" />
+        <activity android:name=".activity.SemiMovieDetailActivity" />
+        <activity android:name=".activity.WonderScreenActivity" />
+        <activity android:name=".activity.VideoPlayer"
+            android:theme="@style/AppPlayer"
+            android:screenOrientation="landscape"/>
+        <activity
+            android:name=".activity.ExpandedControlsActivity"
+            android:label="@string/app_name"
+            android:launchMode="singleTask"
+            android:theme="@style/AppPlayer"
+            android:screenOrientation="portrait">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+            </intent-filter>
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".activity.VideoPlayer"/>
+        </activity>
     </application>
 
 </manifest>
